--- a/Nhom1_WFA_QLSV.csproj
+++ b/Nhom1_WFA_QLSV.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="MaterialSkin.2" Version="2.3.1" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+    <PackageReference Include="WinForms.DataVisualization" Version="1.10.0" />
   </ItemGroup>
 
   <ItemGroup>
